objects/Employees__c/fields/Beneficiary_Bank__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank__c</fullName>
    <label>Beneficiary Bank</label>
    <length>80</length>
    <type>Text</type>
</CustomField>