objects/Employees__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <label>Beneficiary Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>