objects/Employees__c/fields/Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day__c</fullName>
    <label>Birth Day</label>
    <type>Date</type>
</CustomField>