objects/Employees__c/fields/Experience_Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level_Formula__c</fullName>
    <formula>YEAR( TODAY())  -  YEAR( Joined_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Level Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>