objects/Employees__c/fields/ID_issued_on__c.field-meta.xml
<CustomField>
    <fullName>ID_issued_on__c</fullName>
    <label>ID issued on</label>
    <type>Date</type>
</CustomField>