objects/Employees__c/fields/Job_title__c.field-meta.xml
<CustomField>
    <fullName>Job_title__c</fullName>
    <label>Job title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>