objects/Employees__c/fields/Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date__c</fullName>
    <label>Joined Date</label>
    <type>Date</type>
</CustomField>