objects/Employees__c/fields/Personal_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Personal_Tax_Code__c</fullName>
    <label>Personal Tax Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>