objects/Employees__c/fields/Reallocated_KPI__c.field-meta.xml
<CustomField>
    <fullName>Reallocated_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reallocated KPI</label>
    <type>Checkbox</type>
</CustomField>