objects/Employees__c/fields/Social_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Insurance_Number__c</fullName>
    <label>Social Insurance Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>