objects/Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>User__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Job_title__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>